fix page height and background-color on mobile

--- a/hearth/media/css/header.styl
+++ b/hearth/media/css/header.styl
@@ -379,6 +379,10 @@
     }
 }
 
+.page {
+    padding-top: 50px;
+}
+
 @media (min-width: 710px) {
     .page {
         padding: 98px 0 48px;  // 48px + 50px to offset header
